--- a/public/style.css
+++ b/public/style.css
@@ -20,8 +20,42 @@ form div {
   display: inline-block;
 }
 
-th,
-td,
-.all-algos-table {
-  border-bottom: 1px solid #ddd;
+table.all-algos-table th,
+table.all-algos-table td {
+  border: 0px solid #aaaaaa;
+  padding: 3px 2px;
+}
+
+table.all-algos-table {
+  border: 0px solid #1c6ea4;
+  background-color: #eeeeee;
+  width: 100%;
+  text-align: left;
+  border-collapse: collapse;
+}
+table.all-algos-table tbody td {
+  font-size: 16px;
+}
+
+table.all-algos-table thead {
+  background: #1c6ea4;
+  background: -moz-linear-gradient(top, #5592bb 0%, #327cad 66%, #1c6ea4 100%);
+  background: -webkit-linear-gradient(
+    top,
+    #5592bb 0%,
+    #327cad 66%,
+    #1c6ea4 100%
+  );
+  background: linear-gradient(to bottom, #5592bb 0%, #327cad 66%, #1c6ea4 100%);
+  border-bottom: 2px solid #444444;
+}
+
+table.all-algos-table thead th {
+  font-size: 15px;
+  font-weight: bold;
+  color: #ffffff;
+  border-left: 2px solid #d0e4f5;
+}
+table.all-algos-table thead th:first-child {
+  border-left: none;
 }
