--- a/public/style.css
+++ b/public/style.css
@@ -1,59 +1,3 @@
-/* body {
-  font-family: sans-serif;
-}
-
-a {
-  text-decoration: none;
-}
-
-label {
-  display: block;
-}
-
-nav a {
-  display: inline-block;
-  margin: 1em;
-}
-
-form div {
-  margin: 1em;
-  display: inline-block;
-}
-
-table.all-algos-table th,
-table.all-algos-table td {
-  border: 0px solid #aaaaaa;
-  padding: 3px 2px;
-}
-
-.all-algos-table {
-  max-width: 2000px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 10px;
-  padding-right: 10px;
-}
-table.all-algos-table tbody td {
-  font-size: 16px;
-}
-
-.table-header {
-  background-color: #95A5A6;
-  font-size: 14px;
-  text-transform: uppercase;
-  letter-spacing: 0.03em;
-}
-
-table.all-algos-table thead th {
-  font-size: 15px;
-  font-weight: bold;
-  color: #ffffff;
-  border-left: 2px solid #d0e4f5;
-}
-table.all-algos-table thead th:first-child {
-  border-left: none;
-} */
-
 /* .responsive-table li {
     border-radius: 3px;
     padding: 25px 30px;
@@ -85,29 +29,25 @@ table.all-algos-table thead th:first-child {
   flex-basis: 25%;
 }
 
-  @media all and (max-width: 767px) {
-    .table-header {
-      display: none;
-    }
+.table-header {
+  display: none;
+}
 
-    li {
-      display: block;
-    }
-    .col {
-      flex-basis: 100%;
-    }
-    .col {
-      display: flex;
-      padding: 10px 0;
-      &:before {
-        color: #6c7a89;
-        padding-right: 10px;
-        content: attr(data-label);
-        flex-basis: 50%;
-        text-align: right;
-      }
-    }
-  }
+li {
+  display: block;
+}
+.col {
+  display: flex;
+  padding: 10px 0;
+  flex-basis: 100%;
+}
+.col:before {
+  color: #6c7a89;
+    padding-right: 10px;
+    content: attr(data-label);
+    flex-basis: 50%;
+    text-align: right;
+
 } */
 
 .button {
